# bigdata4d

./: CMakeLists.txt  README.md
config/: macbook.cmake  macbook_clang.cmake  mpipc.cmake  mpipc_intel.cmake  thunder.cmake  ubuntu.cmake
examples/: CMakeLists.txt  Simpleapp.cxx  Simpleapp.h  helloworld.cxx  simplemodel.cxx
examples/addfields/: addfields.cxx
examples/diffusion/: diffusion.cu  diffusion.cxx
examples/helloworld/: helloworld.cxx
examples/operators/: operators.cxx
examples/simple/: SimpleApplication.cxx  SimpleApplication.h  simple.cxx
examples/simplemodel/: Simpleapp.cxx  simplemodel.cxx
examples/timer/: timer.cxx
examples/timer_cuda/: timer_cuda.cu  timer_cuda.cxx
include/: Application.h  Diffusion.h  Diffusion.hxx  DiffusionGPU.h  DiffusionGPU.hxx  Field.h  Field.hxx  Grid.h  Grid.hxx  Master.h  Master.hxx  Timer.h  Timer.hxx
src/: Application.cxx  CMakeLists.txt  Field.cxx  Grid.cxx  Master.cxx  Timer.cxx
